k8s/local/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostgo-app
  labels:
    web: app-service
spec:
  replicas: 1
  selector:
    matchLabels:
      web: app-service
  template:
    spec:
      containers:
        - name: hostgo-container
          image: registry.csail.app/hostgo
          ports:
            - containerPort: 4005
              protocol: TCP
              name: access-port
          imagePullPolicy: Always
        - name: docker-container
          image: docker:18.05-dind
          securityContext:
            privileged: true
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
          ports:
            - containerPort: 2375
              protocol: TCP
              name: docker-port
      imagePullSecrets:
        - name: hostgo-secret
      volumes:
        - name: dind-storage
          emptyDir: {}
    metadata:
      labels:
        web: app-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-service
  template:
    spec:
      containers:
        - name: proxy-container
          image: registry.csail.app/proxy
          ports:
            - containerPort: 9093
              protocol: TCP
              name: proxy-port
            - containerPort: 80
              protocol: TCP
              name: acc-httpport
            - containerPort: 443
              protocol: TCP
              name: https-port
      imagePullSecrets:
        - name: hostgo-secret
    metadata:
      labels:
        app: proxy-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-service
  template:
    spec:
      containers:
        - name: echo-container
          image: hashicorp/http-echo
          ports:
            - containerPort: 5678
              protocol: TCP
              name: e-port
          args:
            - "-text=Hello, Echo"
    metadata:
      labels:
        app: echo-service
