k8s/local/services.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis-service
---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: db-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: db-service

---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  labels:
    app: storage-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: storage-service

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    web: app-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 4005
      protocol: TCP
      targetPort: 4005
    - name: git-tcp
      port: 4009
      protocol: TCP
      targetPort: 4009
  selector:
    web: app-service

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-redis-service
  labels:
    app: proxy-redis-service
spec:
  type: ClusterIP
  ports:
    - name: proxy-redis-port
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: proxy-redis-service

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  labels:
    app: proxy-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 9093
      protocol: TCP
      targetPort: 9093
  selector:
    app: proxy-service
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  labels:
    app: registry-service
spec:
  type: ClusterIP
  ports:
    - name: registry-port
      port: 6003
      protocol: TCP
      targetPort: 5000
  selector:
    app: registry-service
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels:
    app: echo-service
spec:
  type: ClusterIP
  ports:
    - name: echo-port
      port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app: echo-service
---
