k8s/local/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60000"
    cert-manager.io/cluster-issuer: "local-cert-issuer"
spec:
  tls:
    - hosts:
        - "csail.app"
        - "*.csail.app"
      secretName: local-cert-secret
  rules:
    - host: "registry.csail.app"
      http:
        paths:
          - backend:
              serviceName: registry-service
              servicePort: 6003
    - host: "api.csail.app"
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 4005
    - host: "csail.app"
      http:
        paths:
          - backend:
              serviceName: app-service
              servicePort: 4005
    - host: "*.csail.app"
      http:
        paths:
          - backend:
              serviceName: proxy-service
              servicePort: 9093
  backend:
    serviceName: app-service
    servicePort: 4005
